--- a/indice.html
+++ b/indice.html
@@ -36,6 +36,26 @@
             </div>
         </div>
     </section>
+    <section class="section-uno">
+        <div class="container">
+            <h2>Bienestar</h2>
+            <p>Descubre los beneficios de una vida saludable y las opciones que ofrecemos para mejorar tu bienestar.</p>
+        </div>
+    </section>
+    
+    <section class="section-dos">
+        <div class="container">
+            <h2>Nuestro Impacto</h2>
+            <p>Conoce cómo hemos cambiado la vida de miles de personas con nuestros productos.</p>
+        </div>
+    </section>
+    
+    <section class="section-tres">
+        <div class="container">
+            <h2>Testimonios</h2>
+            <p>Lee lo que nuestros clientes tienen que decir sobre sus experiencias transformadoras.</p>
+        </div>
+    </section>
     <section class="beneficios" id="beneficios">
         <div class="container">
             <h2>¿Por qué elegir nuestros suplementos?</h2>
@@ -60,7 +80,7 @@
     </section>
     <section class="galeria" id="galeria">
         <div class="container">
-            <h2>Nuestra Galería</h2>
+            <h2 class="galeria-titulo">Nuestra Galería</h2>
             <div class="galeria-grid">
                 <img src="img/imagen1.jpg" alt="Imagen 1">
                 <img src="img/imagen2.jpg" alt="Imagen 2">
