--- a/indice.html
+++ b/indice.html
@@ -36,6 +36,17 @@
             </div>
         </div>
     </section>
+    <section class="video-background-section">
+        <video autoplay muted loop class="background-video">
+          <source src="img/video.mp4" type="video/mp4">
+          Tu navegador no soporta el formato de video.
+        </video>
+        <div class="overlay-content">
+          <h2>Bienvenidos a Vida Saludable</h2>
+          <p>Inspírate para llevar una vida más plena y equilibrada.</p>
+          <a href="#productos" class="cta-button">Explorar Más</a>
+        </div>
+      </section>
     <section class="section-uno">
         <div class="container">
             <h2>Bienestar</h2>
