--- a/consultas.html
+++ b/consultas.html
@@ -12,8 +12,8 @@
             <nav class="navbar">
                 <a href="indice.html" class="logo">🍏 Vida Saludable</a>
                 <ul class="nav-links">
-                    <li><a href="indice.html">Inicio></a></li>
-                    <li><a href="consultas.html">Consultas Nutricional></a></li>
+                    <li><a href="indice.html">Inicio</a></li>
+                    <li><a href="consultas.html">Consultas Nutricional</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
