--- a/indice.html
+++ b/indice.html
@@ -19,6 +19,7 @@
                     <li><a href="#productos">Productos</a></li>
                     <li><a href="#beneficios">Beneficios</a></li>
                     <li><a href="#contacto">Contacto</a></li>
+                    <li><a href="consultas.html">Consultas Nutricional</a></li>
                 </ul>
                 <button class="btn-consulta">Consulta Gratis</button>
             </nav>
