--- a/consultas.html
+++ b/consultas.html
@@ -14,10 +14,52 @@
                 <ul class="nav-links">
                     <li><a href="indice.html">Inicio</a></li>
                     <li><a href="consultas.html">Consultas Nutricional</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <main>
+        <section class="consulta-container">
+            <h1>Solicita tu Consulta Nutricional Gratis</h1>
+            <p>Déjanos tus datos y uno de nuestros especialistas se pondrá en contacto contigo.</p>
+        </section>
+
+        <section class="form-section">
+            <div class="container">
+                <form action="#" method="POST">
+                    <label for="nombre">Nombre Completo:</label>
+                    <input type="text" id="nombre" name="nombre" required>
+
+                    <label for="email">Correo Electrónico:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="telefono">Teléfono:</label>
+                    <input type="tel" id="telefono" name="telefono" required>
+
+                    <label for="edad">Edad:</label>
+                    <input type="number" id="edad" name="edad" min="18" required>
+
+                    <label for="objetivo">¿Cuál es tu objetivo?</label>
+                    <select id="objetivo" name="objetivo" required>
+                        <option value="">Selecciona una opción</option>
+                        <option value="perder peso">Perder peso</option>
+                        <option value="ganar masa muscular">Ganar masa muscular</option>
+                        <option value="mejorar alimentación">Mejorar mi alimentación</option>
+                        <option value="otros">Otros</option>
+                    </select>
+
+                    <label for="mensaje">Comentarios Adicionales:</label>
+                    <textarea id="mensaje" name="mensaje" rows="4"></textarea>
+
+                    <button type="submit" class="btn-primary">Solicitar Consulta</button>
+                </form>
+            </div>
+        </section>
+    </main>
+
+    <footer class="footer">
+        <p>© 2025 Vida Saludable. Todos los derechos reservados.</p>
+    </footer>
+
 </body>
 </html>
