--- a/indice.html
+++ b/indice.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <title>Vida Saludable y Nutrición</title>
     <link rel="stylesheet" href="estilos.css"> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -12,16 +12,17 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">
-                    <li><a href="#"></a><i class="fas fa-apple-alt"></i></a></li>
-                </a>
-                <ul class="nav-links">
-                    <li><a href="#productos">Productos</a></li>
-                    <li><a href="#beneficios">Beneficios</a></li>
-                    <li><a href="#contacto">Contacto</a></li>
-                    <li><a href="consultas.html">Consultas Nutricional</a></li>
+                <ul class="logo">
+                    <li><a href="#"><i class="fas fa-apple-alt"></i></a></li>
                 </ul>
+                    <ul class="nav-links">
+                        <li><a href="#productos">Productos</a></li>
+                        <li><a href="#beneficios">Beneficios</a></li>
+                        <li><a href="#contacto">Contacto</a></li>
+                        <li><a href="consultas.html">Consultas Nutricionales</a></li>
+                    </ul>
                 <button class="btn-consulta">Consulta Gratis</button>
+                <button id="toggle-theme">Cambiar Tema</button>
             </nav>
         </div>
     </header>
