--- a/consultas.html
+++ b/consultas.html
@@ -5,17 +5,21 @@
     <meta name="viewport" content="width=device-width; initial-scale=1.0">
     <title>Consulta nutricional | Vida Saludable</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="indice.html" class="logo">🍏 Vida Saludable</a>
+                <ul class="logo">
+                    <li><a href="#"><i class="fas fa-apple-alt"></i></a></li>
+                </ul>
                 <ul class="nav-links">
                     <li><a href="indice.html">Inicio</a></li>
                     <li><a href="consultas.html">Consultas Nutricional</a></li>
                     
                 </ul>
+                <button class="btn-consulta">Consulta Gratis</button>
                 <button id="toggle-theme">Cambiar Tema</button>
             </nav>
         </div>
