--- a/consultas.html
+++ b/consultas.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="estilos.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
+<link rel="alternate" type="application/rss+xml" title="Eat This RSS Feed" href="https://www.eatthis.com/feed/" />
 <body>
     <header class="header">
         <div class="container">
@@ -62,7 +63,8 @@
             </main>
     <footer class="footer">
         <p>© 2025 Vida Saludable. Todos los derechos reservados.</p>
-    </footer>
+    </footer> 
+     <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Cargando" data-fw-param="171926/"></script> 
     <script src="script.js"></script>
 </body>
 </html>
