--- a/indice.html
+++ b/indice.html
@@ -122,7 +122,8 @@
             </div>
         </div>
     </footer>
-
+    <script type="text/javascript" src="https://feed.mikle.com/js/fw-loader.js" preloader-text="Cargando" data-fw-param="171926/"></script> 
+     
     <script src="script.js"></script> 
 </body>
 </html>
